--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(131,58,180);
+  background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(243,32,41,1) 66%, rgba(250,30,33,1) 70%, rgba(253,29,29,1) 72%, rgba(252,176,69,1) 100%);
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
